<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settingsLinear"
    tools:ignore="MissingClass">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:drawableLeft="@drawable/round_account_circle_black_18dp"
        android:drawableRight="@drawable/round_keyboard_arrow_right_black_18dp1"
        android:gravity="center"
        android:outlineAmbientShadowColor="@color/colorGray"
        android:padding="10sp"
        android:drawablePadding="10dp"
        android:text="@string/yd"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorGray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textColor="@color/colorGray"
        android:drawableLeft="@drawable/round_wifi_black_18dp"
        android:drawableRight="@drawable/round_keyboard_arrow_right_black_18dp"
        android:gravity="center"
        android:padding="10sp"
        android:drawablePadding="10dp"
        android:text="@string/wireless"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textColor="@color/colorGray"
        android:drawableLeft="@drawable/outline_devices_black_18dp"
        android:drawableRight="@drawable/round_keyboard_arrow_right_black_18dp"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/devise"
        android:drawablePadding="10dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textColor="@color/colorGray"
        android:drawableLeft="@drawable/outline_volume_up_black_18dp"
        android:drawableRight="@drawable/round_keyboard_arrow_right_black_18dp"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/sounds"
        android:drawablePadding="10dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textColor="@color/colorGray"
        android:drawableLeft="@drawable/outline_security_black_18dp"
        android:drawableRight="@drawable/round_keyboard_arrow_right_black_18dp"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/security"
        android:drawablePadding="10dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textColor="@color/colorGray"
        android:drawableLeft="@drawable/outline_smartphone_black_18dp"
        android:drawableRight="@drawable/round_keyboard_arrow_right_black_18dp"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/display"
        android:drawablePadding="10dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textColor="@color/colorGray"
        android:drawableLeft="@drawable/outline_line_style_black_18dp"
        android:drawableRight="@drawable/round_keyboard_arrow_right_black_18dp"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/storage"
        android:drawablePadding="10dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textColor="@color/colorGray"
        android:drawableLeft="@drawable/outline_backup_table_black_18dp"
        android:drawableRight="@drawable/round_keyboard_arrow_right_black_18dp"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/apps"
        android:drawablePadding="10dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textColor="@color/colorGray"
        android:drawableLeft="@drawable/outline_smartphone_black_18dp"
        android:drawableRight="@drawable/round_keyboard_arrow_right_black_18dp"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/display"
        android:drawablePadding="10dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textColor="@color/colorGray"
        android:drawableLeft="@drawable/outline_battery_charging_full_black_18dp"
        android:drawableRight="@drawable/round_keyboard_arrow_right_black_18dp"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/battery"
        android:drawablePadding="10dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:drawableLeft="@drawable/outline_notifications_black_18dp"
        android:drawableRight="@drawable/round_keyboard_arrow_right_black_18dp"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/notifications"
        android:drawablePadding="10dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/colorGray"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textColor="@color/colorGray"
        android:drawableLeft="@drawable/outline_account_box_black_18dp"
        android:drawableRight="@drawable/round_keyboard_arrow_right_black_18dp"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/users"
        android:drawablePadding="10dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textColor="@color/colorGray"
        android:drawableLeft="@drawable/outline_assignment_late_black_18dp"
        android:drawableRight="@drawable/round_keyboard_arrow_right_black_18dp"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/system"
        android:drawablePadding="10dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

</LinearLayout>